src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_71.deca
// Description:
//    regle 3.71, type de expr != type_classe
//
// Resultats:
//    Ligne 9: Method call on native type.

{
    int a = 1;
    boolean b = a.equals(1);
}